[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/scenes/tiles/Game.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/Battle Loop #4.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/textures/buttons/play2.png" type="Texture" id=4]
[ext_resource path="res://assets/textures/buttons/logo.png" type="Texture" id=5]
[ext_resource path="res://assets/textures/buttons/play3.png" type="Texture" id=6]
[ext_resource path="res://assets/textures/buttons/play.png" type="Texture" id=7]

[node name="Main" type="Spatial"]
script = ExtResource( 2 )
level = ExtResource( 1 )

[node name="MainMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -52.0
margin_top = -28.0
margin_right = 52.0
margin_bottom = 28.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="MainMenu/VBoxContainer"]
margin_right = 104.0
margin_bottom = 56.0
rect_min_size = Vector2( 104, 56 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 4 )
texture_focused = ExtResource( 4 )
expand = true

[node name="TextureRect" type="TextureRect" parent="MainMenu"]
anchor_left = 0.5
anchor_top = 0.1
anchor_right = 0.5
anchor_bottom = 0.2
margin_left = -152.0
margin_right = 152.0
margin_bottom = 112.0
rect_min_size = Vector2( 304, 172 )
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ContinueMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -52.0
margin_top = -28.0
margin_right = 52.0
margin_bottom = 28.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextLevelButton" type="TextureButton" parent="ContinueMenu/VBoxContainer"]
margin_right = 104.0
margin_bottom = 56.0
rect_min_size = Vector2( 104, 56 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 4 )
texture_focused = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="ContinueMenu"]
anchor_left = 0.5
anchor_top = 0.2
anchor_right = 0.5
anchor_bottom = 0.2
margin_left = -75.0
margin_right = 75.0
margin_bottom = 14.0
text = "Level x"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameHolder" type="Spatial" parent="."]

[node name="Game" parent="GameHolder" instance=ExtResource( 1 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -20.0
autoplay = true
[connection signal="pressed" from="MainMenu/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="ContinueMenu/VBoxContainer/NextLevelButton" to="." method="_on_NextLevelButton_pressed"]
